--- a/little_dinosaur_jump/Properties/Resources.resx
+++ b/little_dinosaur_jump/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mianfeiziti_com_1717997498000" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mianfeiziti_com_1717997498000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="naruto_run" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\naruto-run.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -144,6 +147,9 @@
   </data>
   <data name="restart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\restart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_43C5D55D32799FBF9C82851540C57374" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\43C5D55D32799FBF9C82851540C57374.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="小仙人掌" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\小仙人掌.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
